syntax = "proto3";

package kedge.config;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "kedge/config/common/adhoc.proto";
import "kedge/config/grpc/routes/routes.proto";
import "kedge/config/http/routes/routes.proto";

/// DirectorConfig is the top level configuration message the director.
message DirectorConfig {
    message Grpc {
        repeated kedge.config.grpc.routes.Route routes = 1;
        repeated kedge.config.common.Adhoc adhoc_rules = 2;
    }
    message Http {
        repeated kedge.config.http.routes.Route routes = 1;
        repeated kedge.config.common.Adhoc adhoc_rules = 2;
    }

    Grpc grpc = 1 [(validator.field) = {msg_exists : true}];
    Http http = 2 [(validator.field) = {msg_exists : true}];
}
